<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_activity">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.cw_1.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cw_1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.cw_1.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />
    <fragment
        android:id="@+id/navigation_trip"
        android:name="com.example.cw_1.ui.trip.TripFragment"
        android:label="@string/title_trip"
        tools:layout="@layout/fragment_trip" />
</navigation>