<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_id" />

        <EditText
            android:id="@+id/editId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_id"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_date" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="JAN 01 2020"
            android:textSize="20sp"
            android:textColor="@color/black"
            style="?android:spinnerStyle"
            android:onClick="openDatePicker"/>

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_note" />

        <EditText
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_note"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/moneyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_money" />

        <EditText
            android:id="@+id/editMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_money"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_category" />

        <EditText
            android:id="@+id/editCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_save" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>