<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/trip_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/title_trip_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTripName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/hint_trip_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColorHint="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_destination"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/hint_destination"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/title_date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--            <Button-->
                <!--                android:id="@+id/editTripDate"-->
                <!--                style="?android:spinnerStyle"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_weight="1"-->
                <!--                android:editable="false"-->
                <!--                android:onClick="openTripDatePicker"-->
                <!--                android:text="@string/example_date"-->
                <!--                android:textColor="@color/black"-->
                <!--                android:textColorHint="#757575"-->
                <!--                android:textSize="20sp"-->
                <!--                tools:ignore="Deprecated" />-->

                <CalendarView
                    android:id="@+id/editTripDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Switch
                    android:id="@+id/switchRiskAssessment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/title_risk_assessment"
                    android:textColor="@android:color/tab_indicator_text"
                    android:textSize="18sp"

                    android:textStyle="bold"
                    android:thumbTint="@color/main_color"
                    android:trackTint="@android:color/tab_indicator_text"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_description"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/hint_description"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/btnSaveTrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_btn"
                    android:backgroundTint="@color/main_color"
                    android:onClick="saveTrip"
                    android:text="@string/btn_save" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>