<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SearchResultActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleItemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/search_result" />

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_trip_name"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/searchTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_destination"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/searchDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:gravity="center"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_date"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/searchDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/titleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_description"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/searchDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_risk_assessment"
                android:textAlignment="textEnd"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/searchRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->
<!--        <Button-->
<!--            android:id="@+id/btnSeeAllActivities"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="10dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/btn_see_all_activities"-->
<!--            />-->
<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/go_back"
            />
        <Button
            android:id="@+id/btnDeleteActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btn_delete"
            />
    </LinearLayout>


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>