<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ItemDetailActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleItemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="Update activity" />

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_category"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <EditText
            android:id="@+id/updateCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:hint="@string/hint_category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/titleMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:text="@string/title_money"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/updateMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:hint="@string/hint_money"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/titleIssueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/title_date"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

<!--        <Button-->
<!--            android:id="@+id/updateIssueDate"-->
<!--            style="?android:spinnerStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="100dp"-->
<!--            android:editable="false"-->
<!--            android:text="@string/example_date"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16sp"-->
<!--            tools:ignore="Deprecated" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp">

            <Button
                android:id="@+id/btnPrevUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_chevron_left_24"
                android:button="@null"
                android:gravity="center"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/updateIssueDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@null"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnNextUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_chevron_right_24"
                android:button="@null"
                android:clickable="false"
                android:gravity="center" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/titleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:text="@string/title_note"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/updateNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:hint="@string/hint_note"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:text="Cancel"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:text="Update"
            />
    </LinearLayout>


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>